--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,13 +6,18 @@ expediagroup_graphql_version = "6.5.3"
 expediagroup_graphql_ktor_version = "7.0.0-alpha.6"
 apollographql_version = "4.0.0-alpha.2"
 junit_version = "5.8.1"
+kotlin_coroutine_version = "1.7.2"
+letsplot_js_version = "4.4.1"
 
 [libraries]
 logback = { module = "ch.qos.logback:logback-classic", version.ref = "logback_version"}
 
 # Junit
-kotlin-junit = { module = "org.jetbrains.kotlin:kotlin-test-junit", version.ref = "kotlin_version" }
 junit  = { module = "org.junit.jupiter:junit-jupiter", version.ref = "junit_version" }
+
+# Kotlin Test
+kotlin-test-junit = { module = "org.jetbrains.kotlin:kotlin-test-junit", version.ref = "kotlin_version" }
+kotlin-test-js = { module = "org.jetbrains.kotlin:kotlin-test-js"}
 
 # Ktor
 ktor-server-core = { module = "io.ktor:ktor-server-core-jvm", version.ref = "ktor_version" }
@@ -29,9 +34,15 @@ okhttp-interceptor = { module = "com.squareup.okhttp3:logging-interceptor", vers
 graphql-kotlin-server = { module = "com.expediagroup:graphql-kotlin-server", version.ref = "expediagroup_graphql_version" }
 graphql-kotlin-ktor-server = { module = "com.expediagroup:graphql-kotlin-ktor-server", version.ref = "expediagroup_graphql_ktor_version" }
 
+# Coroutine
+kotlin-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "kotlin_coroutine_version"}
+
+# Lets-Plot Kotlin JS
+letsplot-js = { module = "org.jetbrains.lets-plot:lets-plot-kotlin-js", version.ref = "letsplot_js_version" }
 
 [plugins]
-kotlinJvmPlugin = { id = 'org.jetbrains.kotlin.jvm', version.ref =  "kotlin_version" }
+kotlinJvmPlugin = { id = "org.jetbrains.kotlin.jvm", version.ref =  "kotlin_version" }
+kotlinJsPlugin = { id = "org.jetbrains.kotlin.js", version.ref = "kotlin_version"}
 kotlinSerializationPlugin = { id = "org.jetbrains.kotlin.plugin.serialization", version = "kotlin_version" }
 apollographqlPlugin = { id = "com.apollographql.apollo3", version.ref = "apollographql_version" }
 ktorPlugin = { id = "io.ktor.plugin", version.ref = "ktor_version" }
